# mzproto

./: .gitignore  MANIFEST.in  README.md  build.zig  build.zig.zon  flake.nix  pyproject.toml  setup.py
.github/: test-zig.yml
.github/workflows/: test-zig.yml
schema/: api.tl  mtproto.tl
src/: bridged_api.zig  dev_remove_later.zig  generate.zig  main.zig  maina  methods_api.zig  root.zig  tl_base.zig
src/generator/: api.zig  api_tests.zig  base.zig  clone.zig  defs.zig  deserialize.zig  generate.zig  main.zig  serialize.zig  t.zig  unions.zig  utils.zig
src/generator/mz/: common.zig  generate_python.zig  generate_python_bridge.zig  generate_python_native.zig  generate_zig_api.zig  generate_zig_bridge.zig  parser.zig
src/generator/schema/: api.tl  mtproto.tl  mzproto.mz
src/generator/tl_parser/: constructors.zig  parameters.zig  sections.zig  types.zig
src/lib/: api.zig  client.zig  client_info.zig  client_manager.zig  storage.zig  transport.zig  transport_connector.zig  updates_manager.zig  utils.zig
src/lib/crypto/: exp.zig  factorize.zig  ige.zig  miller_rabin.zig  mt1.zig  mt1_crypto.zig  mt2.zig  mt2_crypto.zig  pq.c  pq.h  public_key_parser.zig
src/lib/network/: abridged.zig  libxev_tcp.zig  network.zig  network_data_provider.zig  tcp_abridged.zig  transport.zig  transport_provider.zig
src/lib/proto/: auth_key.zig  dispatcher.zig  message_id.zig  session.zig  session_pool.zig  session_test_server.zig  utils.zig
src/parser/: constructors.zig  flags.zig  parameters.zig  parameters_type.zig  parse.zig  sections.zig  types.zig  utils.zig
(+14 files in other folders)
