[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mzproto"
version = "0.0.0"
description = "MTProto client written in Zig"
readme = "README.md"
requires-python = ">=3.13"
license = "Apache-2.0"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Zig",
    "Topic :: Communications",
]

[project.urls]
Homepage = "https://github.com/dadadani/mzproto"
Source = "https://github.com/dadadani/mzproto"
